--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "lodash": "^4.17.21",
+    "mongoose": "^8.5.1",
+    "odash": "^0.0.1-security"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
