--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test"
   },
   "author": "Bhavya Govil",
   "license": "ISC",
@@ -19,6 +19,8 @@
     "odash": "^0.0.1-security"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   }
 }
